Bug 1502610 - Better account for negative end margin in available size of inlines. r=jfkthame!,#layout

* c5502-imrgn-r-003.xht doesn't pass in any browser after this change.

 * firefox-bug-1881495.html expects the wrong behavior (the Xs to wrap
   due to the negative margin). New behavior matches Safari.

Differential Revision: https://phabricator.services.mozilla.com/D275005